Fixed horizontal scrolling issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -9,3 +9,8 @@
 #clear-button {
   padding-right: 30px;
 }
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
